Always show scrollbar to avoid shifting

--- a/Climb/wwwroot/css/site.css
+++ b/Climb/wwwroot/css/site.css
@@ -7,6 +7,10 @@
     font-family: 'Montserrat', sans-serif;
 }
 
+html {
+    overflow-y: scroll;
+}
+
 html, body {
     height: 100%;
 }
